# Telegram_Scrapping_Bot

./: README.md
gerkules/: constants.py  example_env  keyboards.py  main.py  parsers.py  pyproject.toml  readme.md  run.py  states.py
gerkules/DB/: connect.py  crud.py  models.py
gerkules/config/: config.py
gerkules/routes/: telegram.py
